# patchpilot

./: .gitignore  README.md
client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx  styles.css  theme.css
client/src/components/: ConfigEditor.tsx  HistoryPanel.tsx  MonitorPanel.tsx  SharedCommandsPanel.tsx
client/src/lib/: config.ts  ipc.ts  theme.ts
client/src/types/: app.ts
docs/: POC-开发计划.md  POC-验收脚本.md  POC-验收记录.md  poc-software-items.sample.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  model.rs  software_catalog.rs
src-tauri/src/services/: check_all_guard.rs  check_service.rs  config_store.rs  detect_service.rs  history_events.rs  history_store.rs  mod.rs  result_store.rs  shell_runner.rs
src-tauri/src/services/config_migrations/: item_patch.rs  mod.rs
