[package]
name = "patchpilot"
version = "0.1.0"
description = "Menubar updater monitor for local tools"
authors = ["firegnu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.2", features = ["tray-icon", "image-png"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
